--- a/Views/Auth/Login.ejs
+++ b/Views/Auth/Login.ejs
@@ -55,6 +55,10 @@
         <div class="forgot-password">
             <a href="#">Forgot password?</a>
         </div>
+        
+        <div class="restaurant-owner">
+            <a href="/admin-login">Restaurant Owner? Login here</a>
+        </div>
     </div>
 </div>
 
